--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,22 @@
-body{
-    text-align: center;
-    background-color: #F8E8A6;
+body {
+  background-color: #f8e8a6;
+  margin: 8px;
+}
+h1{
+    margin: 20px auto;
+}
+
+h1,
+p {
+  text-align: center;
+}
+footer {
+  text-align: center;
+}
+
+.croissant-photo {
+  max-width: 100%;
+  border-radius: 10px;
+  display: block;
+  margin: 30px auto;
 }
